k8s-basics-lohika/practice-6/yaml/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-deployment-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spring-app-v1
  template:
    metadata:
      labels:
        component: spring-app-v1
    spec:
      containers:
        - name: spring-app
          image: rgederin/spring-boot-k8s-config:0.0.3-SNAPSHOT
          ports:
            - containerPort: 8080
