k8s-basics-lohika/practice-6/yaml/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-v1
  labels:
    component: spring-app-v1
spec:
  selector:
    component: spring-app-v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
