k8s-basics-lohika/practice-6/yaml/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-v2
  labels:
    component: spring-app-v2
spec:
  selector:
    component: spring-app-v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
